# ai-twitter-share

./: README.md  pyproject.toml
ai_twitter_share/: __init__.py  generator.py  poster.py  prompts.py
