[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-twitter-share"
version = "0.1.0"
description = "Generate tweet threads with Claude AI and post them to Twitter/X"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.30.0",
    "tweepy>=4.14.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
